# demo-adk-app

./: .gitignore  LICENSE  Makefile  README.md
backend/: .dockerignore  Dockerfile  cloudbuild.yaml  config.py  main.py  pyproject.toml  requirements.in  requirements.txt
backend/api/: app.py  auth.py  models.py
backend/config/: config.py
backend/services/: provider.py  runner.py
backend/simple_agent/: agent.py  instructions.txt
backend/src/demo_adk_app/: main.py  pyproject.toml
backend/src/demo_adk_app/agents/concierge_agent/: agent.py  instructions.txt  prompt.py
backend/src/demo_adk_app/agents/dealer_agent/: agent.py  instructions.txt  prompt.py  tools.py
backend/src/demo_adk_app/agents/game_master_agent/: agent.py  instructions.txt  prompt.py
backend/src/demo_adk_app/agents/game_room_agent/: agent.py  instructions.txt  models.py  prompt.py  tools.py
backend/src/demo_adk_app/agents/user_profile_agent/: agent.py  instructions.txt  prompt.py
backend/src/demo_adk_app/api/: app.py  auth.py  models.py
backend/src/demo_adk_app/services/: provider.py  runner.py
backend/src/demo_adk_app/simple_agent/: agent.py
backend/src/demo_adk_app/utils/: config.py  constants.py  deckofcards_client.py  models.py  tools.py
backend/test/: aider_prompts.txt  cli.py
backend/utils/: config.py  deckofcards_client.py
copilot/: backend_prompts.md  frontend_prompts.md
docs/: DEALER_AGENT_REASONING.md  FIREBASE_SETUP.md  GCP_SETUP.md
frontend/: .env  .env.example  .gitignore  package-lock.json  package.json
frontend/src/: App.css  App.js  LandingPage.js  apiClient.js  firebase.js
utils/: deckofcards_client.py
