[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "your_project_name"
version = "0.1.0"
description = "Your project description"
authors = [
    { name="Your Name", email="your.email@example.com" }
]
dependencies = [
    "google-adk[database]",
    "requests",
    "pydantic",
    "pydantic-settings",
    "fastapi",
    "uvicorn",
    "google-cloud-storage",
    "google-cloud-aiplatform",
    "firebase-admin"
]
